# stree-os

./: Cargo.toml  Makefile
.cargo/: config
docs/: 000 参考.md  001 环境搭建.md
os/: Cargo.toml
os/prepare/: entry.asm  linker.ld
os/src/: main.rs
std/src/: lang_items.rs  lib.rs  prelude.rs  sbi.rs
